--- a/public/index.html
+++ b/public/index.html
@@ -29,7 +29,7 @@
   <link
     href="https://fonts.googleapis.com/css2?family=Alata&family=Gemunu+Libre:wght@400;700&family=Montserrat:wght@400;500&display=swap"
     rel="stylesheet">
-  <title>React App</title>
+  <title>Toprak Çavuşdağ - Dish App</title>
 </head>
 
 <body>
